--- a/_config.yml
+++ b/_config.yml
@@ -1,55 +1,73 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you: 
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
-title: Your awesome title
-email: your-email@example.com
+title: QuarkSpin Blog
+email: quarkspin@tutanota.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  Réflexion et curiosité
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "https://quarkspin.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+logo: "/images/icon_blue.svg"
+twitter_username: QuarkSpin1
+github_username:  QuarkSpin
+
+# Credits
+author:
+  name: Nicolas Maurice
+  picture: /images/nicolas.png
+  twitter: QuarkSpin1
+  email: quarkspin@tutanota.com
+  links:
+    - title: Twitter
+      url: https://twitter.com/QuarkSpin1
+      icon: fab fa-twitter
+    - title: GitHub
+      url: https://github.com/QuarkSpin
+      icon: fab fa-github
 
 # Build settings
-theme: minima
-plugins:
-  - jekyll-feed
+markdown: kramdown
+feed:
+  path: atom.xml
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+# Liquid
+liquid:
+  error_mode: strict
+
+# Theme
+theme: jekyll-theme-so-simple
+skin: "/assets/css/skins/default.css"
+
+# Plugins
+plugins:
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-feed
+  - jekyll-paginate
+
+# Pagination - https://jekyllrb.com/docs/pagination/
+paginate: 10
+paginate_path: /page:num/
+
+# Locale
+locale: fr-FR
+date_format: "%d/%m/%Y"
+
+# Reading time
+read_time: true
+words_per_minute: 200
+
+# Maths
+mathjax:
+  enable: true             # MathJax equations, e.g. true, false (default)
+  combo: "tex-svg"         # "tex-svg" (default), "tex-mml-chtml", etc.
+  tags: "ams"              # "none", "ams" (default), "all"
+
+# Footer Links
+footer_links:
+  - title: Twitter
+    url: https://twitter.com/QuarkSpin
+    icon: fab fa-twitter-square
+  - title: GitHub
+    url: https://github.com/QuarkSpin
+    icon: fab fa-github-square
+  - title: Feed
+    url: atom.xml
+    icon: fas fa-rss-square
