--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ mathjax:
 # Footer Links
 footer_links:
   - title: Twitter
-    url: https://twitter.com/QuarkSpin
+    url: https://twitter.com/QuarkSpin1
     icon: fab fa-twitter-square
   - title: GitHub
     url: https://github.com/QuarkSpin
