--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,10 @@ feed:
 liquid:
   error_mode: strict
 
+# Navigation
+category_archive_path: "/categories/#"
+tag_archive_path: "/sujets/#"
+
 # Theme
 remote_theme: "mmistakes/so-simple-theme@3.2.0"
 skin: "/assets/css/skins/default.css"
