--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ google_analytics: G-2S0N51NS35
 # Credits
 author:
   name: Nicolas Maurice
-  picture: /images/nicolas.png
+  picture: /images/nicolas.jpg
   twitter: QuarkSpin42
   email: quarkspin@tutanota.com
   links:
