--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,5 +8,7 @@
   url: /archives/
 - title: Rechercher
   url: /rechercher/
+- title: Lectures
+  url: /lectures/
 - title: À propos
   url: /a-propos/
