--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@
   url: /rechercher/
 - title: Lectures
   url: /lectures/
-- title: Chaînes YouTube
+- title: Chaines YouTube
   url: /chaines-youtube/
 - title: À propos
   url: /a-propos/
