--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: QuarkSpin
+title: QuarkSpin (blog archivé)
 email: quarkspin@tutanota.com
 description: Réflexions, science et politique
 logo: "/images/icon_blue.svg"
